<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eduardoptorezan.exand_bibliotecamusical.MainActivity"
    tools:ignore="MergeRootFrame" >

    <Button
        android:id="@+id/btnCadastrarCd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastrarCD" />

    <Button
        android:id="@+id/btnListarCDs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:text="@string/btnListarCDs" />

    <Button
        android:id="@+id/btnCadastrarMusico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnListarCDs"
        android:layout_marginTop="32dp"
        android:text="@string/btnCadastrarMusico" />

    <Button
        android:id="@+id/btnListarMusicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/btnListarMusicos" />

</RelativeLayout>

