<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/labelNomeDoAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNomeDoAlbum" />

        <TextView
            android:id="@+id/lblNomeDoAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmBranco" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/labelNomeDoCompositor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNomeDoMusico" />

        <TextView
            android:id="@+id/lblNomeDoCompositor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmBranco" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/labelAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAno" />

        <TextView
            android:id="@+id/lblAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEmBranco" />

    </TableRow>

</TableLayout>